<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_AccuracyTest" Id="{cf747bed-c98f-4034-9edf-cccd140613d8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT	
		//DH joint angle at initial position
		g_jntDHInitPos:ARRAY[1..2,1..7] OF LREAL:=[0,-pi/2,pi/2,-pi,pi,-pi/2,0,      0,-pi/2,pi/2,0,pi,pi/2,0];
		
		//Test points for the spatial cube, with specific locations given by MATLAB
        g_testPointNum:INT:=8;	
		
		//test motion cycle number
		g_testMotCycNum:INT:=20;
		
		
		//Accuracy testing points under the condition of unchanged posture
		//Test sequence:C-D-H-G-B-A-E-F
		//If testing the accuracy of a single arm, it is necessary to test point by point
		//If testing master-slave accuracy, it is necessary to test point by point
		g_armPoseA1:ARRAY [1..8,1..7] OF LREAL:=[
			0.1341,   -0.2232,    0.1479,   1.5708,0,-1.5708,0,
			0.3136,   -0.3808,    0.1698,   1.5708,0,-1.5708,0,
			0.3136,   -0.3808,    0.5270,   1.5708,0,-1.5708,0,
			0.1341,   -0.2232,    0.540,   1.5708,0,-1.5708,0,
			0.2498,    0.0735,     0.0626,   1.5708,0,-1.5708,0,
			0.4060,    0.0735,     0.0474,   1.5708,0,-1.5708,0,
			0.4060,    0.0735,     0.5716,   1.5708,0,-1.5708,0,
			0.2498,    0.0735,     0.530,   1.5708,0,-1.5708,0];
		g_armPoseA2:ARRAY [1..8,1..7] OF LREAL:=[
			0.2498,    -0.0735,     0.0626,   1.5708,0,-1.5708,0,
			0.4060,    -0.0735,     0.0474,   1.5708,0,-1.5708,0,
			0.4060,    -0.0735,     0.5716,   1.5708,0,-1.5708,0,
			0.2498,    -0.0735,     0.5196,   1.5708,0,-1.5708,0,
			0.1341,     0.2232,     0.1479,   1.5708,0,-1.5708,0,
			0.3136,      0.3808,     0.1698,   1.5708,0,-1.5708,0,
			0.3136,      0.3808,     0.4870,   1.5708,0,-1.5708,0,
			0.1341,      0.2232,     0.4720,   1.5708,0,-1.5708,0];		
		
		
		(*
		//Accuracy testing points under posture change conditions
		//to do:Drag the master arm to any position in space and record its joint position and spatial position
		g_armPoseA1_PoseChange:ARRAY [1..8,1..7] OF LREAL:=[
			0.1341,   -0.2232,    0.1479,   1.5708,    0.0000,   -1.5708,0,
			0.3136,   -0.3808,    0.1698,   1.5708,   -0.1745,   -1.5708,0,
			0.3136,   -0.3808,    0.5270,   1.5708,    0.1745,   -1.5708,0,
			0.1341,   -0.2232,    0.540,   1.5708,    0.0000,   -1.3963,0,
			0.2498,    0.0735,     0.0626,  1.5708,   -0.0000,   -1.7453,0,
			0.4060,    0.0735,     0.0474,  1.7453,   -0.0000,   -1.5708,0,
			0.4060,    0.0735,     0.5716,  1.3963,    0.0000,   -1.5708,0,
			0.2498,    0.0735,     0.530,  1.5708,   -0.0873,   -1.5708,0];
		g_armPoseA2_PoseChange:ARRAY [1..8,1..7] OF LREAL:=[
			0.2498,    -0.0735,     0.0626,   1.5708,    0.0000,   -1.5708,0,
			0.4060,    -0.0735,     0.0474,   1.5708,   -0.1745,   -1.5708,0,
			0.4060,    -0.0735,     0.5716,   1.5708,    0.1745,   -1.5708,0,
			0.2498,    -0.0735,     0.5196,   1.5708,   -0.0000,   -1.3963,0,
			0.1341,     0.2232,     0.1479,   1.5708,    0.0000,   -1.7453,0,
			0.3136,      0.3808,     0.1698,  1.3963,   -0.0000,   -1.5708,0,
			0.3136,      0.3808,     0.5270,  1.7453,    0.0000,   -1.5708,0,
			0.1341,      0.2232,     0.4720,  1.5708,   -0.0873,   -1.5708,0];	
		*)
		
		(*
		//Maximum workspace testing related points
		g_maxSpaceArm1:ARRAY [1..8,1..7] OF LREAL:=[
			0.1327,   -0.2243,    0.1461,   1.5708,    0.0000,   -1.5708,0,
			0.3140,   -0.3835,    0.1683,   1.5708,   -0.1745,   -1.5708,0,
			0.3138,   -0.3831,    0.5278,   1.5680,    0.1775,   -1.5714,0,
			0.1327,   -0.2243,    0.5422,   1.5708,    0.0000,   -1.3963,0,
			0.2495,    0.0754,    0.0600,  1.5708,   -0.0000,   -1.7453,0,
			0.4073,    0.0754,    0.0446,  1.7453,   -0.0000,   -1.5708,0,
			0.4073,    0.0754,    0.5741,  1.3963,    0.0000,   -1.5708,0,
			0.2495,    0.0754,    0.5321,  1.5708,   -0.0873,   -1.5708,0];			
		g_maxSpaceArm2:ARRAY [1..8,1..7] OF LREAL:=[
			0.2495,   -0.0754,    0.0600,   1.5708,    0.0000,   -1.5708,0,
			0.4073,   -0.0754,    0.0446,   1.5708,   -0.1745,   -1.5708,0,
			0.4073,   -0.0754,    0.5741,   1.5708,    0.1745,   -1.5708,0,
			0.2498,    -0.0735,     0.5225,   1.5708,   -0.0000,   -1.3963,0,
			0.1327,    0.2243,    0.1461,   1.5708,    0.0000,   -1.7453,0,
			0.3140,    0.3835,    0.1683,  1.3963,   -0.0000,   -1.5708,0,
			0.3205,    0.3957,    0.4892,  1.6698,    -0.086,   -1.5792,0,
			0.1327,    0.2243,     0.545,  1.5708,   -0.0873,   -1.5708,0];		
		*)
	
	
		//Maximum workspace testing related points
		g_maxSpaceArm1:ARRAY [1..8,1..7] OF LREAL:=[
			0.41371,   0.0785,  0.0454,   1.5708,    0.0000,   -1.5708,0,
			0.24851,   0.0785, 0.06149,   1.5708,   -0.1745,   -1.5708,0,
			0.13024, -0.22483,  0.1403,   1.5680,    0.1775,   -1.5714,0,
			0.31312, -0.38287, 0.15757,   1.5708,    0.0000,   -1.3963,0,
			0.41371,   0.0785, 0.57824,  1.5708,   -0.0000,   -1.7453,0,
			0.24851,   0.0785, 0.52214,  1.7453,   -0.0000,   -1.5708,0,
			0.13089, -0.22316, 0.47087,  1.3963,    0.0000,   -1.5708,0,
			0.31358, -0.38078, 0.52699,  1.5708,   -0.0873,   -1.5708,0];
		g_maxSpaceArm2:ARRAY [1..8,1..7] OF LREAL:=[
			0.41371, -0.0785,  0.0454,   1.5708,    0.0000,   -1.5708,0,
			0.24851, -0.0785, 0.06149,   1.5708,   -0.1745,   -1.5708,0,
			0.13024, 0.22483,  0.1403,   1.5708,    0.1745,   -1.5708,0,
			0.31312, 0.38287, 0.15757,   1.5708,   -0.0000,   -1.3963,0,
			0.41371, -0.0785, 0.57824,   1.5708,    0.0000,   -1.7453,0,
			0.24851, -0.0785, 0.52214,  1.3963,   -0.0000,   -1.5708,0,
			0.13089, 0.22316, 0.47087,  1.6698,    -0.086,   -1.5792,0,
			0.31358, 0.38078, 0.52699,  1.5708,   -0.0873,   -1.5708,0];				
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>